# kani

./: conventions.html  print.html  searchindex.js  searchindex.json
bookrunner/: bookrunner.txt  index.html
crates/: .rustc_info.json
crates/debug/.fingerprint/kani-441fca1963d8d471/: doc-lib-kani  doc-lib-kani.json
crates/debug/.fingerprint/kani_macros-5c41e6f5395c003e/: lib-kani_macros  lib-kani_macros.json
crates/debug/.fingerprint/proc-macro-error-352ce3d1930851d2/: lib-proc-macro-error  lib-proc-macro-error.json
crates/debug/.fingerprint/proc-macro-error-attr-9abd48999405d61a/: lib-proc-macro-error-attr  lib-proc-macro-error-attr.json
crates/debug/.fingerprint/proc-macro2-4353ec316f296536/: build-script-build-script-build  build-script-build-script-build.json
crates/debug/.fingerprint/proc-macro2-5f5a840e65b04189/: lib-proc-macro2  lib-proc-macro2.json
crates/doc/: search-index.js
crates/doc/kani/: all.html  attr.solver.html  index.html  sidebar-items.js
firecracker-stubbing-demo/: Cargo.toml  README.md
firecracker-stubbing-demo/src/: lib.rs
kani-compiler/: Cargo.toml
kani-compiler/kani_queries/src/: lib.rs
kani-compiler/src/: attributes.rs  main.rs  parser.rs  session.rs
kani-compiler/src/codegen_cprover_gotoc/: compiler_interface.rs  mod.rs
kani-compiler/src/mir_transform/: mod.rs
kani-compiler/src/stubbing/: annotations.rs  mod.rs  transform.rs
kani-compiler/src/unsound_experiments/: arg_parser.rs
kani-driver/: Cargo.toml
kani-driver/src/: args.rs  call_cbmc.rs  call_single_file.rs  main.rs  unsound_experiments.rs
(+688 files in other folders)
