# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT
[package]
name = "firecracker-stubbing-demo"
version = "0.1.0"
edition = "2021"

[workspace.metadata.kani.flags]
all-features = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "0.99.0", default-features = false, features = ["from", "add", "iterator"] }
lazy_static = "1.4.0"
